--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "4.3.0",
+    "@reduxjs/toolkit": "^1.8.2",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "prop-types": "^15.7.2",
+    "python": "^0.0.4",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.6",
     "react-router-dom": "^5.2.0",
+    "redux-thunk": "^2.4.1",
     "turbolinks": "^5.2.0"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "redux-devtools-extension": "^2.13.9",
     "webpack-dev-server": "^3.11.2"
   }
 }
